benchmark works with java16, and close #50